--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,9 +42,10 @@
                         android:shadowDy="1.5"
                         android:shadowRadius="2.0" />
                     <LinearLayout
-                        android:layout_width="280dp"
+                        android:layout_width="320dp"
                         android:layout_height="wrap_content"
                         android:paddingTop="15dp"
+                        android:gravity="center"
                         android:paddingBottom="15dp">
 
                         <TextView
@@ -77,7 +78,7 @@
                             android:textSize="12sp"
                             android:gravity="center"
                             android:layout_marginLeft="10dp"
-                            android:text="Active :"/>
+                            android:text="*Active :"/>
                         <TextView
                             android:id="@+id/totalActiveTextView"
                             android:layout_width="50dp"
@@ -93,9 +94,10 @@
                             android:shadowRadius="1.6" />
                     </LinearLayout>
                     <LinearLayout
-                        android:layout_width="280dp"
+                        android:layout_width="320dp"
                         android:layout_height="wrap_content"
                         android:paddingTop="5dp"
+                        android:gravity="center"
                         android:paddingBottom="15dp">
 
                         <TextView
@@ -168,6 +170,8 @@
                 android:padding="10dp"
                 android:layout_width="320dp"
                 android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
                 android:orientation="vertical">
                 <LinearLayout
                     android:layout_width="320dp"
@@ -292,11 +296,15 @@
                 </LinearLayout>
             </LinearLayout>
         <LinearLayout
-            android:layout_margin="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="2dp"
-            android:paddingBottom="5dp">
+            android:gravity="center"
+            android:paddingBottom="2dp">
             <TextView
                 android:paddingTop="5dp"
                 android:layout_width="wrap_content"
@@ -332,6 +340,26 @@
                 android:layout_height="wrap_content"
                 android:onClick="infoClicked"
                 android:src="@drawable/i_icon" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="2dp"
+            android:gravity="center"
+            android:paddingBottom="5dp">
+            <TextView
+                android:paddingTop="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/comfortaa"
+                android:maxLines="2"
+                android:lines="2"
+                android:text="*Migrated cases are also included in Total Active cases. Data is updated every few hours."
+                android:textColor="#504F4F"
+                android:autoSizeTextType="uniform"
+                android:textSize="10sp" />
         </LinearLayout>
         </LinearLayout>
 
